Scrolling a new node when the latched node is removed.

When the currently scrolling element gets removed, scrolling should
continue with scrolling the next element even when scroll latching is
enabled. This behavior is consistent with what both Safari and Firefox
browsers do.

This cl fixes the issue for both wheel and touch scrolling:
When the latched element gets deleted in the middle of a scrolling
sequence on main thread side, handling a synthetic GSB causes a new
hittest to continue scrolling on a different element. Scrolling on the
compositor side was already working for non-animated wheel scrolling
since deleting the scrolling node forces the rest of the scrolling to
be handled on main thread side. Before handling the rest of the GSUs
in main thread side,a GSB gets sent to the main thread side to cause
a hittesting. This cl adds transferring to the main thread side for
touch scrolling as well.
ScrollAnimation path for wheel scrolling is also changed to re-latch
when the latched scrolling node gets deleted in the middle of scrolling. 

InputHandlerProxyTest.(Wheel/Touch)ScrollHandlingSwitchedToMainThread,
WheelScrollLatchingBrowserTest.WheelScrollingRelatchWhenLatchedScrollerRemoved

Bug: 771409,773986
Test: virtual/wheelscrolllatching/latched-scroll-node-removed.html,
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I24630a101a184fcd6a8480c553074808ffea6a35
Reviewed-on: https://chromium-review.googlesource.com/709658
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: weiliangc <weiliangc@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510468}
Former-commit-id: 209d2454442b33a913b53a902c0646062fa25bcc