ui/events/blink/input_handler_proxy.cc
@@ -896,8 +896,9 @@ InputHandlerProxy::HandleGestureScrollUpdate(
 
   if (!scroll_result.did_scroll &&
       input_handler_->ScrollingShouldSwitchtoMainThread() &&
-      gesture_event.source_device == blink::kWebGestureDeviceTouchpad &&
-      touchpad_and_wheel_scroll_latching_enabled_) {
+      ((gesture_event.source_device == blink::kWebGestureDeviceTouchpad &&
+        touchpad_and_wheel_scroll_latching_enabled_) ||
+       gesture_event.source_device == blink::kWebGestureDeviceTouchscreen)) {
     gesture_scroll_on_impl_thread_ = false;
     client_->GenerateScrollBeginAndSendToMainThread(gesture_event);
 
